--- a/_bibliography/confs.bib
+++ b/_bibliography/confs.bib
@@ -12,7 +12,7 @@
   abbr={RE//verse},
   preview={reverse-25.png},
   slides={REverse_firmware_analysis_2025.pdf},
-  video={https://www.youtube.com/watch?v=LsDnrfZt_Xs},
+  video={https://www.youtube.com/embed/LsDnrfZt_Xs?si=WPsiOCyRnKfdE2pV},
   selected={true}
 }
 
@@ -64,7 +64,7 @@
   preview={balccon-23.png},
   slides={BalCCon2k23.pdf},
   additional_info={. <code>[workshop]</code>},
-  video={https://www.youtube.com/watch?v=NykSMKcc-rA},
+  video={https://www.youtube.com/embed/NykSMKcc-rA?si=SclylBZdlKNXytRT},
   selected={false}
 }
 
@@ -79,7 +79,7 @@
   abbr={KLEE Workshop},
   preview={klee-workshop-22.png},
   slides={2022-09-klee-workshop-rdavid.pdf},
-  video={https://www.youtube.com/watch?v=PNbNtTa5Sp4},
+  video={https://www.youtube.com/embed/PNbNtTa5Sp4?si=_f7S4y4b0y4CXxbn},
   selected={false},
   website={https://srg.doc.ic.ac.uk/klee22/schedule.html}
 }
@@ -111,7 +111,7 @@
   preview={bh-usa-21.png},
   pdf={US-21-David-Greybox-Program-Synthesis-wp.pdf},
   slides={US-21-David-Greybox-Program-Synthesis.pdf},
-  video={https://www.youtube.com/watch?v=eJo74i7nxtk},
+  video={https://www.youtube.com/embed/eJo74i7nxtk?si=3WHOVD4dVQzXbCsM},
   code={https://github.com/quarkslab/qsynthesis},
   selected={false},
   website={https://www.blackhat.com/us-21/briefings/schedule/index.html#greybox-program-synthesis-a-new-approach-to-attack-dataflow-obfuscation-22930}
@@ -147,7 +147,7 @@
   abbr={Black Hat EU},
   preview={bh-eu-16.png},
   slides={BHEU16_Robin_David.pdf},
-  video={https://www.youtube.com/watch?v=KCMCqxEYIzY},
+  video={https://www.youtube.com/embed/KCMCqxEYIzY?si=dP2Y8GBwdfWMCk4-},
   selected={false},
   website={https://www.blackhat.com/eu-16/briefings/schedule/index.html#code-deobfuscation-intertwining-dynamic-static-and-symbolic-approaches-4933}
 }
