--- a/_news/2025-06-04_sstic.md
+++ b/_news/2025-06-04_sstic.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-[`UPCOMING`] Talks at [SSTIC'25](https://www.sstic.org/2025/presentation/pyrrha_diving_into_firmware_cartography/): _"Pyrrha & Friends: Diving into Firmware Cartography"_
+Talks at [SSTIC'25](https://www.sstic.org/2025/presentation/pyrrha_diving_into_firmware_cartography/): _"Pyrrha & Friends: Diving into Firmware Cartography"_
